[package]
name = "tidetest"
version = "0.1.0"
authors = ["Anders Jensen <anders.c.jensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"
async-std = "1.4.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false